Add calendar structure and styles

--- a/calendario.html
+++ b/calendario.html
@@ -453,8 +453,8 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <!-- <li class="breadcrumb-item"><a href="#"></a></li> -->
-                <li class="breadcrumb-item active" aria-current="page">ATIVIDADES</li>
+                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADES</a></li>
+                <li class="breadcrumb-item active" aria-current="page">ENCONTRO INTERNACIONAL DE JOVENS MARISTAS - GUATEMALA 2019</li>
               </ol>
             </nav>
           </div>
@@ -462,52 +462,7 @@
       </div>
     </section> <!-- end -->
 
-    <section class="mc-activities mc-activities--eventos">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="main-title">EVENTOS HISTÓRICOS DO INSTITUTO NOS ÚLTIMOS ANOS</h2>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="eventos.html">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-activities mc-activities--calendar">
+    <section class="mc-activities mc-activities--calendar mc-activities--calendar-bg">
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-6">
@@ -543,7 +498,8 @@
                   Nossa senhora das dores
                 </span>
                 <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident,
                 </a>
               </div>
             </div>
@@ -567,7 +523,8 @@
                   Nossa senhora das dores
                 </span>
                 <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident,
                 </a>
               </div>
             </div>
@@ -591,55 +548,11 @@
                   Nossa senhora das dores
                 </span>
                 <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident,
                 </a>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="calendario.html">VER TODOS OS EVENTOS<i class="fa fa-long-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-activities mc-activities--projects">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="main-title">PROJETOS ESPECIAIS</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-lg-8">
-            <div class="mc-default__card mc-default__card--v2">
-              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
-              <div>
-                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
-                <div class="mc-default__body">
-                  <a href="">Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</a>
-                </div>
-              </div>
-            </div>
-            <div class="mc-default__card mc-default__card--v2">
-              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
-              <div>
-                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
-                <div class="mc-default__body">
-                  <a href="">Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4">
-            ADS 300x600
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="">VER TODOS OS PROJETOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
