--- a/eventos.html
+++ b/eventos.html
@@ -453,7 +453,7 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADE</a></li>
+                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADES</a></li>
                 <li class="breadcrumb-item active" aria-current="page">ENCONTRO INTERNACIONAL DE JOVENS MARISTAS - GUATEMALA 2019</li>
               </ol>
             </nav>
