Add pics page structure and styles

--- a/main.html
+++ b/main.html
@@ -276,11 +276,11 @@
                     <div class="col-12">
                       <ul class="dropdown-menumega__bottomlinks">
                         <li><a class="" href="atividades.html">ATIVIDADES</a></li>
-                        <li><a class="" href="">NOTÍCIAS</a></li>
-                        <li><a class="" href="">BIBLIOTECA</a></li>
-                        <li><a class="" href="">FOTOS</a></li>
-                        <li><a class="" href="">VÍDEOS</a></li>
-                        <li><a class="btn btn-fale" href="">FALE CONOSCO</a></li>
+                        <li><a class="" href="noticias.html">NOTÍCIAS</a></li>
+                        <li><a class="" href="biblioteca.html">BIBLIOTECA</a></li>
+                        <li><a class="" href="fotos.html">FOTOS</a></li>
+                        <li><a class="" href="videos.html">VÍDEOS</a></li>
+                        <li><a class="btn btn-fale" href="fale.html">FALE CONOSCO</a></li>
                       </ul>
                     </div>
                   </div>
