Add news styles

--- a/noticias.html
+++ b/noticias.html
@@ -549,7 +549,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4">
-            <h2 class="main-title">NOTÍCIAS</h2>
+            <h2 class="main-title main-title--space30">NOTÍCIAS</h2>
             <div class="mc-latestnews__card">
               <div class="mc-latestnews__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
               <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
@@ -580,38 +580,51 @@
             </div>
           </div> <!-- end -->
           <div class="col-12 col-lg-4">
-            <h2 class="main-title">BOLETINS</h2>
-            <div class="mc-latestnews__card">
-              <div class="mc-latestnews__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+            <h2 class="main-title main-title--space30">BOLETINS</h2>
+            <div class="mc-latestnews__card mc-latestnews__card--v3 mc-latestnews__card--bg">
               <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">CASA GERAL</span>
               </div>
               <div class="mc-latestnews__body">
                 <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
               </div>
-              <div class="mc-latestnews__footer">
-                <ul>
-                  <li><a href="">Inglês</a></li>
-                  <li><a href="">Espanhol</a></li>
-                  <li><a href="">Francês</a></li>
-                </ul>
+            </div>
+            <div class="mc-latestnews__card mc-latestnews__card--v3 mc-latestnews__card--bg">
+              <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">CASA GERAL</span>
+              </div>
+              <div class="mc-latestnews__body">
+                <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
               </div>
             </div>
           </div> <!-- end -->
           <div class="col-12 col-lg-4">
-            <h2 class="main-title">VIDEOS</h2>
-            <div class="mc-latestnews__card">
+            <h2 class="main-title main-title--space30">VIDEOS</h2>
+            <div class="mc-latestnews__card mc-latestnews__card--bg">
               <div class="mc-latestnews__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
               <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">CASA GERAL</span>
               </div>
               <div class="mc-latestnews__body">
                 <p>Novo Conselho Executivo da USG para o triênio 2018-2021 - Ir. Ernesto Sánchez eleito membro do Conselho</p>
               </div>
-              <div class="mc-latestnews__footer">
-                <ul>
-                  <li><a href="">Inglês</a></li>
-                  <li><a href="">Espanhol</a></li>
-                  <li><a href="">Francês</a></li>
-                </ul>
+            </div>
+            <div class="tags">
+              <h2 class="main-title main-title--space30">EXPLORAR</h2>
+              <div class="tags__content">
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+              </div>
+              <h2 class="main-title main-title--space30">ARQUIVO</h2>
+              <div class="tags__content">
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
               </div>
             </div>
           </div> <!-- end -->
