--- a/fotos.html
+++ b/fotos.html
@@ -472,33 +472,57 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-8">
             <div class="row">
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="eventos-single.html">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+              <div class="col-12">
+                <div class="mc-latestnews__card mc-latestnews__card--pics mc-latestnews__card--bg">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</h5>
+                        <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                      </a>
+                    </div>
                   </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                </div>
+                <div class="mc-latestnews__card mc-latestnews__card--pics mc-latestnews__card--bg">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</h5>
+                        <p>Quisque convallis, Irmãos Marista facilisis, massa nunc maximus ligula, nec sodales lorem ipsum Marista.</p>
+                      </a>
+                    </div>
                   </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6">
-                <a class="mc-activities__card" href="">
-                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-                  <div class="mc-activities__body">
-                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                </div>
+                <div class="mc-latestnews__card mc-latestnews__card--pics mc-latestnews__card--bg">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</h5>
+                        <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                      </a>
+                    </div>
                   </div>
-                </a>
+                </div>
+                <div class="mc-latestnews__card mc-latestnews__card--pics mc-latestnews__card--bg">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</h5>
+                      </a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-
-          </div>
+          </div> <!-- end -->
           <div class="col-12 col-sm-6 col-lg-4">
             <div class="tags">
               <h2 class="main-title main-title--space30">EXPLORAR</h2>
@@ -541,7 +565,7 @@
               </div>
             </div>
             <a href="" class="btn btn-more-news">VEJA TODAS AS NOTÍCIAS <i class="fa fa-long-arrow-right"></i></a>
-          </div>
+          </div> <!-- end -->
         </div>
       </div>
     </section> <!-- end -->
