--- a/biblioteca.html
+++ b/biblioteca.html
@@ -462,188 +462,104 @@
       </div>
     </section> <!-- end -->
 
-    <section class="mc-activities mc-activities--eventos">
+    <section class="mc-library">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-9">
             <h2 class="main-title main-title--space30">BIBLIOTECA</h2>
-            <h3 class="main-subtitle main-subtitle--gray">Biblioteca Marista é um espaço virtual onde pode encontrar uma série de arquivos em formato digital, desde fontes
-            históricas do Instituto até publicações atuais.</h3>
+            <h3 class="main-subtitle main-subtitle--gray">Biblioteca Marista é um espaço virtual onde pode encontrar uma série de
+              arquivos em formato digital, desde fontes
+              históricas do Instituto até publicações atuais.</h3>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4">
-            <a class="mc-activities__card" href="">
-              <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
-              <div class="mc-activities__body">
-                Encontro Internacional de Jovens Maristas - Guatemala 2019
-              </div>
-            </a>
-          </div>
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="eventos.html">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
 
-    <section class="mc-activities mc-activities--calendar">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-sm-6">
-            <h2 class="main-title">CALENDÁRIO MARISTA</h2>
-          </div>
-          <div class="col-12 col-sm-6">
-            <div class="form-group mc-activities__select">
-              <label for="">MÊS</label>
-              <select name="" id="">
-                <option value="">Setembro</option>
-              </select>
+        <div class="mc-library__search">
+          <div class="row">
+            <div class="col-12 col-md-9 d-flex align-items-center">
+              <p class="mc-library__search-text">Para pesquisar basta escolher um assunto abaixo ou utilizar a lupa para buscar outros assuntos.</p>
+            </div>
+            <div class="col-12 col-md-3">
+              <a href="" class="mc-library__search-button"><i class="fa fa-search" aria-hidden="true"></i></a>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="mc-library__search-tags">
+                <div class="tags">
+                  <div class="tags__content">
+                    <a class="tags__link" href="#">MARCELINO CHAMPAGNAT</a>
+                    <a class="tags__link" href="#">DOCUMENTOS MARISTAS 1</a>
+                    <a class="tags__link" href="#">BOLETIM MARISTA 1</a>
+                    <a class="tags__link" href="#">BULLETIN DE I’ISNTITUT 1</a>
+                    <a class="tags__link" href="#">NOTICIAS MARISTAS 1</a>
+                    <a class="tags__link" href="#">DOCUMENTOS MARISTAS 1</a>
+                    <a class="tags__link" href="#">BULLETIN DE I’ISNTITUT 1</a>
+                    <a class="tags__link" href="#">MARCELINO CHAMPAGNAT</a>
+                    <a class="tags__link" href="#">BOLETIM MARISTA 1</a>
+                    <a class="tags__link" href="#">SANTOS MARISTAS 1</a>
+                    <a class="tags__link" href="#">SANTOS MARISTAS 1</a>
+                    <a class="tags__link" href="#">NOTICIAS MARISTAS 1</a>
+                  </div>
+                </div>
+              </div>
+              <div class="mc-library__search-result-message">
+                <p>250 RESULTADOS ENCONTRADOS <span>“Marcelino Champagnat”</span></p>
+              </div>
+              <div class="mc-library__search-filters">
+                <ul class="list-inline">
+                  <li class="list-inline-item"><a href="">Tudo</a></li>
+                  <li class="list-inline-item"><a href="">Páginas</a></li>
+                  <li class="list-inline-item"><a href="">Artigos</a></li>
+                  <li class="list-inline-item"><a href="">Fotos</a></li>
+                </ul>
+              </div>
+              <div class="mc-library__search-results">
+                <div class="mc-latestnews__card mc-latestnews__card--result">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header">
+                      <span class="label">ITÁLIA</span>
+                      <span class="label">ITÁLIA</span>
+                    </div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Marcelino Champagnat</h5>
+                        <p>São Marcelino Champagnat, padre marista, fundador do Instituto dos Irmãos Maristas, apaixona-se por Deus e se entrega
+                        com entusiasmo a favor das crianças e jovens, especialmente mais necessitados.</p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="mc-latestnews__card mc-latestnews__card--result">
+                  <div class="mc-latestnews__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
+                  <div>
+                    <div class="mc-latestnews__header">
+                      <span class="label">ITÁLIA</span>
+                      <span class="label">ITÁLIA</span>
+                    </div>
+                    <div class="mc-latestnews__body">
+                      <a href="">
+                        <h5>Marcelino Champagnat</h5>
+                        <p>São Marcelino Champagnat, padre marista, fundador do Instituto dos Irmãos Maristas, apaixona-se por Deus e se entrega
+                        com entusiasmo a favor das crianças e jovens, especialmente mais necessitados.</p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
 
-        </div>
-        <div class="row">
-          <div class="col-12 col-lg-6">
-            <div class="mc-activities--calendar__card">
-              <div class="mc-activities--calendar__card-left">
-                <div class="mc-activities--calendar__card-top">
-                  <span class="mc-activities--calendar__card-start">Início</span>
-                  <span class="mc-activities--calendar__card-date">01</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-                <div class="mc-activities--calendar__card-bottom">
-                  <span class="mc-activities--calendar__card-end">Fim</span>
-                  <span class="mc-activities--calendar__card-date">05</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-              </div>
-              <div class="mc-activities--calendar__card-right">
-                <span class="mc-activities--calendar__card-title">
-                  Nossa senhora das dores
-                </span>
-                <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <div class="mc-activities--calendar__card">
-              <div class="mc-activities--calendar__card-left">
-                <div class="mc-activities--calendar__card-top">
-                  <span class="mc-activities--calendar__card-start">Início</span>
-                  <span class="mc-activities--calendar__card-date">01</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-                <div class="mc-activities--calendar__card-bottom">
-                  <span class="mc-activities--calendar__card-end">Fim</span>
-                  <span class="mc-activities--calendar__card-date">05</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-              </div>
-              <div class="mc-activities--calendar__card-right">
-                <span class="mc-activities--calendar__card-title">
-                  Nossa senhora das dores
-                </span>
-                <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <div class="mc-activities--calendar__card">
-              <div class="mc-activities--calendar__card-left">
-                <div class="mc-activities--calendar__card-top">
-                  <span class="mc-activities--calendar__card-start">Início</span>
-                  <span class="mc-activities--calendar__card-date">01</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-                <div class="mc-activities--calendar__card-bottom">
-                  <span class="mc-activities--calendar__card-end">Fim</span>
-                  <span class="mc-activities--calendar__card-date">05</span>
-                  <span class="mc-activities--calendar__card-month">SET</span>
-                </div>
-              </div>
-              <div class="mc-activities--calendar__card-right">
-                <span class="mc-activities--calendar__card-title">
-                  Nossa senhora das dores
-                </span>
-                <a href="" class="mc-activities--calendar__card-text">
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="calendario.html">VER TODOS OS EVENTOS<i class="fa fa-long-arrow-right"></i></a>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-activities mc-activities--projects">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="main-title">PROJETOS ESPECIAIS</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-lg-8">
-            <div class="mc-default__card mc-default__card--v2">
-              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
-              <div>
-                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
-                <div class="mc-default__body">
-                  <a href="">Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</a>
+                <div class="mc-library__search-pagination">
+                  <nav aria-label="...">
+                    <ul class="pagination pagination-lg">
+                      <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">1</a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    </ul>
+                  </nav>
                 </div>
               </div>
             </div>
-            <div class="mc-default__card mc-default__card--v2">
-              <div class="mc-default__image"><img src="https://via.placeholder.com/270x170" alt=""></div>
-              <div>
-                <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
-                <div class="mc-default__body">
-                  <a href="">Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4">
-            ADS 300x600
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="">VER TODOS OS PROJETOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
