--- a/biblioteca.html
+++ b/biblioteca.html
@@ -547,16 +547,24 @@
                   </div>
                 </div>
 
-                <div class="mc-library__search-pagination">
-                  <nav aria-label="...">
-                    <ul class="pagination pagination-lg">
-                      <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">1</a>
-                      </li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    </ul>
-                  </nav>
+                <div class="mc-pagination">
+                  <div class="d-flex">
+                    <div class="mx-auto">
+                      <ul class="pagination pagination-lg">
+                        <li class="page-item disabled">
+                          <a class="page-link" href="#" tabindex="-1"><i class="fa fa-long-arrow-left"></i> VOLTAR</a>
+                        </li>
+                        <li class="page-item disabled">
+                          <a class="page-link" href="#" tabindex="-1">1</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">AVANÇAR <i class="fa fa-long-arrow-right"></i></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
