Add fale conosco page structure and styles

--- a/main.html
+++ b/main.html
@@ -280,7 +280,7 @@
                         <li><a class="" href="biblioteca.html">BIBLIOTECA</a></li>
                         <li><a class="" href="fotos.html">FOTOS</a></li>
                         <li><a class="" href="videos.html">VÍDEOS</a></li>
-                        <li><a class="btn btn-fale" href="fale.html">FALE CONOSCO</a></li>
+                        <li><a class="btn btn-fale" href="fale-conosco.html">FALE CONOSCO</a></li>
                       </ul>
                     </div>
                   </div>
@@ -419,7 +419,7 @@
               </div>
             </li>
             <li class="nav-item active">
-              <a class="nav-link nav-link--button" href="#">
+              <a class="nav-link nav-link--button" href="fale-conosco.html">
                 <span>FALE CONOSCO</span>
                 <img src="src/images/icon-envelope@2x.png" alt="envelope">
               </a>
