Add instituto page structure and styles

--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -431,6 +431,250 @@
   </header> <!-- end -->
 
   <main>
+    <section class="mc-breadcrumbs">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
+                <!-- <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADES</a></li> -->
+                <li class="breadcrumb-item active" aria-current="page">INSTITUTO MARISTA</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-institute">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2 p-x-0 p-y-3">
+            <ul class="sidenav mc-sidenav list-unstyled">
+              <li><a href="#sec1">HISTÓRIA</a></li>
+              <li><a href="#sec2">FUNDADOR</a></li>
+              <li><a href="#sec3">NOSSA PRESENÇA</a></li>
+              <li><a href="#sec4">GOVERNO GERAL</a></li>
+              <li><a href="#sec5">ADMINISTRAÇÃO GERAL</a></li>
+              <li><a href="#sec6">CASA GERAL</a></li>
+              <li><a href="#sec7">CASA DE MANZIANA</a></li>
+              <li><a href="#sec8">CAPÍTULOS GERAIS</a></li>
+              <li><a href="#sec9">CONFERÊNCIAS GERAIS</a></li>
+              <li><a href="#sec10">ASSEMBLEIAS DA MISSÃO</a></li>
+            </ul>
+          </div> <!-- /#admin-sidebar -->
+          <div id="admin-main-control" class="col-md-10 p-x-3 p-y-1">
+            <div id="sec1" class="mc-institute__section">
+              <div class="row">
+                <div class="col-12 col-md-7">
+                  <h2 class="main-title">HISTÓRIA</h2>
+                  <p>Irmãos Maristas das Escolas (F.M.S. - Fratres Maristæ a Scholis)</p>
+                  <p>Marcelino Champagnat fundava, em 2 de janeiro de 1817, em La Valla, na França, o Instituto religioso laical, ou
+                  Instituto religioso de Irmãos, sob o nome de Pequenos Irmãos de Maria. Considerava-o como um ramo da Sociedade de Maria.
+                  A Santa Sé aprovava-nos em 1863 como Instituto autônomo e de direito pontifício. Ao mesmo tempo em que respeitava nosso
+                  nome de origem, dava-nos o de Irmãos Maristas das Escolas (F.M.S. - Fratres Maristæ a Scholis).</p>
+                </div>
+                <div class="col-12 col-md-5">
+                  <img src="https://via.placeholder.com/470x370" alt="">
+                </div>
+                <div class="col-12">
+                  <h3>DADOS BÁSICOS</h3>
+                  <p>Os Irmãos Maristas são irmãos consagrados a Deus, que seguem Jesus do jeito de Maria, que vivem em comunidade e que se
+                  dedicam especialmente à educação das crianças e dos jovens, e com mais carinho aos mais carentes. São 3.000 irmãos,
+                  espalhados em 80 países dos cinco continentes. Partilham sua tarefa de maneira direta com mais de 72.000 leigos e
+                  atendem perto de 654.000 crianças e jovens.</p>
+
+                  <img src="https://via.placeholder.com/1170x527" alt="">
+
+                  <p>O itinerário marista compreende as seguintes etapas: discernir a vocação, postular o ingresso em comunidades de
+                  formação, viver um tempo de noviciado que conclui com a profissão dos votos ou compromissos, prossegue um tempo de
+                  formação acadêmica para as tarefas que desempenharão nos anos sucessivos e iniciar de maneira direta sua dedicação às
+                  crianças e jovens nas diversas situações, consciente de que seu serviço constitui um valor inestimável.</p>
+                  <a href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
+                </div>
+                <div class="col-12">
+                  <div class="mc-institute__numbers">
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <div class="mc-institute__numbers-item">
+                          <span>3000</span>
+                          <span>IRMÃOS</span>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="mc-institute__numbers-item">
+                          <span>80</span>
+                          <span>PAÍSES</span>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="mc-institute__numbers-item">
+                          <span>05</span>
+                          <span>CONTINENTES</span>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="mc-institute__numbers-item">
+                          <span>7200</span>
+                          <span>LEIGOS</span>
+                        </div>
+                      </li>
+                      <li class="list-inline-item">
+                        <div class="mc-institute__numbers-item">
+                          <span>654000</span>
+                          <span>CRIANÇAS E JOVENS</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div> <!-- end -->
+
+            <div id="sec2" class="mc-institute__section">
+              <div class="row">
+                <div class="col-12 col-md-7">
+                  <h2 class="main-title">FUNDADOR</h2>
+                  <p>São Marcelino Champagnat, padre marista, fundador do Instituto dos Irmãos Maristas, apaixona-se por Deus e se entrega
+                    com entusiasmo a favor das crianças e jovens, especialmente mais necessitados. Uma comunidade internacional de irmãos
+                    continua hoje em dia seu sonho. Quando vê crianças e jovens sem instrução nem catecismo, exclama: “Necessitamos irmãos”.
+                  E a 2 de janeiro de 1817 inicia com dois jovens o projeto do Instituto dos Irmãozinhos de Maria. O papa João Paulo II
+                  canoniza Marcelino no dia 18 de abril de 1999 na praça São Pedro do Vaticano e o reconhece como santo da Igreja
+                  universal.</p>
+                  <a href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
+                </div>
+                <div class="col-12 col-md-5">
+                  <img src="https://via.placeholder.com/555x370" alt="">
+                </div>
+              </div>
+            </div> <!-- end -->
+
+            <div id="sec3" class="mc-institute__section">
+              <div class="mc-ourpresence mc-ourpresence--institute">
+                <div class="row">
+                  <div class="col-12">
+                    <h2 class="main-title">NOSSA PRESENÇA</h2>
+                  </div>
+                  <div class="col-12">
+                    <ul class="nav nav-tabs" id="ourPresenceTabs" role="tablist">
+                      <li class="nav-item">
+                        <a class="nav-link active" id="tab_one" data-toggle="tab" href="#tab_one" role="tab" aria-controls="tab_one"
+                          aria-selected="true">Onde estamos <i class="fa fa-long-arrow-right"></i></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="tab_two" data-toggle="tab" href="#tab_two" role="tab" aria-controls="tab_two"
+                          aria-selected="false">Estatísticas <i class="fa fa-long-arrow-right"></i></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="tab_three" data-toggle="tab" href="#tab_three" role="tab" aria-controls="tab_three"
+                          aria-selected="false">Unidades Administrativas <i class="fa fa-long-arrow-right"></i></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" id="tab_four" data-toggle="tab" href="#tab_four" role="tab" aria-controls="tab_four"
+                          aria-selected="false">A Missão Marista em números <i class="fa fa-long-arrow-right"></i></a>
+                      </li>
+                    </ul>
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="tab_one" role="tabpanel" aria-labelledby="tab_one">
+                        <div class="row">
+                          <div class="col-12">
+                            <p class="mc-ourpresence__text">Os Irmãos Maristas se encontram em 81 países dos cinco continentes. Aqui
+                              te mostramos nossa organização e te convidamos
+                              a dar uma volta pelo mapa-múndi para descobrir a presença marista no mundo.</p>
+                          </div>
+                          <div class="col-12">
+                            <div class="mc-ourpresence__map">
+                              <img src="src/images/map-home.svg" alt="mapa">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="tab-pane" id="tab_two" role="tabpanel" aria-labelledby="tab_two">...2</div>
+                      <div class="tab-pane" id="tab_three" role="tabpanel" aria-labelledby="tab_three">...3</div>
+                      <div class="tab-pane" id="tab_four" role="tabpanel" aria-labelledby="tab_four">...4</div>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <ul class="list-inline mc-ourpresence__continent">
+                      <li class="list-inline-item"><a href="">ÁFRICA</a></li>
+                      <li class="list-inline-item"><a href="">AMÉRICA</a></li>
+                      <li class="list-inline-item"><a href="">ÁSIA</a></li>
+                      <li class="list-inline-item"><a href="">EUROPA</a></li>
+                      <li class="list-inline-item"><a href="">OCEANIA</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="mc-ourpresence__countriues">
+                  <div class="row">
+                    <div class="col-12 col-md-7">
+                      <h4>Presença Marista na Europa em 15 países</h4>
+                      <ul>
+                        <li><span>Bélgica</span></li>
+                        <li><span>Alemanha</span></li>
+                        <li><span>Irlanda</span></li>
+                        <li><span>Portugal</span></li>
+                        <li><span>França</span></li>
+                        <li><span>Grécia</span></li>
+                        <li><span>Itália</span></li>
+                        <li><span>Romênia</span></li>
+                        <li><span>Casa Geral</span></li>
+                        <li><span>Hungria</span></li>
+                        <li><span>Holanda</span></li>
+                        <li><span>Escócia</span></li>
+                        <li><span>Espanha</span></li>
+                        <li><span>Suíça</span></li>
+                        <li><span>Reino Unido</span></li>
+                      </ul>
+                    </div>
+                    <div class="col-12 col-md-5">
+                      <img src="https://via.placeholder.com/555x370" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div> <!-- end -->
+
+            </div>
+
+            <div id="sec4" class="mc-institute__section">
+              <h2 class="main-title">GOVERNO GERAL</h2>
+
+            </div>
+
+            <div id="sec5" class="mc-institute__section">
+              <h2 class="main-title">ADMINISTRAÇÃO GERAL</h2>
+
+            </div>
+
+            <div id="sec6" class="mc-institute__section">
+              <h2 class="main-title">CASA GERAL</h2>
+
+            </div>
+
+            <div id="sec7" class="mc-institute__section">
+              <h2 class="main-title">CASA DE MANZIANA</h2>
+
+            </div>
+
+            <div id="sec8" class="mc-institute__section">
+              <h2 class="main-title">CAPÍTULOS GERAIS</h2>
+
+            </div>
+
+            <div id="sec9" class="mc-institute__section">
+              <h2 class="main-title">CONFERÊNCIAS GERAIS</h2>
+
+            </div>
+
+            <div id="sec10" class="mc-institute__section">
+              <h2 class="main-title">ASSEMBLEIAS DA MISSÃO</h2>
+
+            </div>
+          </div> <!-- /#admin-main-control -->
+        </div> <!-- /.row -->
+      </div>
+
+    </section> <!-- end -->
     <section class="mc-highlights-tabs">
       <div class="container">
         <div class="row">
@@ -728,63 +972,6 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-ourpresence">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="main-title">NOSSA PRESENÇA</h2>
-          </div>
-          <div class="col-12">
-            <ul class="nav nav-tabs" id="ourPresenceTabs" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="tab_one" data-toggle="tab" href="#tab_one" role="tab" aria-controls="tab_one"
-                  aria-selected="true">Onde estamos <i class="fa fa-long-arrow-right"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="tab_two" data-toggle="tab" href="#tab_two" role="tab" aria-controls="tab_two"
-                  aria-selected="false">Estatísticas <i class="fa fa-long-arrow-right"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="tab_three" data-toggle="tab" href="#tab_three" role="tab" aria-controls="tab_three"
-                  aria-selected="false">Unidades Administrativas <i class="fa fa-long-arrow-right"></i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="tab_four" data-toggle="tab" href="#tab_four" role="tab" aria-controls="tab_four"
-                  aria-selected="false">A Missão Marista em números <i class="fa fa-long-arrow-right"></i></a>
-              </li>
-            </ul>
-            <div class="tab-content">
-              <div class="tab-pane active" id="tab_one" role="tabpanel" aria-labelledby="tab_one">
-                <div class="row">
-                  <div class="col-12">
-                    <p class="mc-ourpresence__text">Os Irmãos Maristas se encontram em 81 países dos cinco continentes. Aqui te mostramos nossa organização e te convidamos
-                    a dar uma volta pelo mapa-múndi para descobrir a presença marista no mundo.</p>
-                  </div>
-                  <div class="col-12">
-                    <div class="mc-ourpresence__map">
-                      <img src="src/images/map-home.svg" alt="mapa">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="tab_two" role="tabpanel" aria-labelledby="tab_two">...2</div>
-              <div class="tab-pane" id="tab_three" role="tabpanel" aria-labelledby="tab_three">...3</div>
-              <div class="tab-pane" id="tab_four" role="tabpanel" aria-labelledby="tab_four">...4</div>
-            </div>
-          </div>
-          <div class="col-12">
-            <ul class="list-inline mc-ourpresence__continent">
-              <li class="list-inline-item"><a href="">ÁFRICA</a></li>
-              <li class="list-inline-item"><a href="">AMÉRICA</a></li>
-              <li class="list-inline-item"><a href="">ÁSIA</a></li>
-              <li class="list-inline-item"><a href="">EUROPA</a></li>
-              <li class="list-inline-item"><a href="">OCEANIA</a></li>
-            </ul>
           </div>
         </div>
       </div>
